--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<frameset rows="100%">
-  <frameset cols="100%">
-    <frame src="http://www.ojire.com/id/index.html" frameborder="0" scrolling="yes">
-  </frameset>
-</frameset>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="refresh" content="0; URL='http://www.ojire.com/id/index.html'" />
+<title>Video notes redirect</title>
+</head>
+
+<body>
+</body>
+</html>
