--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="refresh" content="0; URL='http://www.ojire.com/id/index.html'" />
-<title>Video notes redirect</title>
+<title>o | ji | re</title>
 </head>
 
 <body>
